Added basic playlist functionality: -Can manually switch to next song with right arrow -Song automatically switches to the next entry on song end (if the playlist isn't over yet) More info in Playlist.h file

--- a/AudioAppSolution/AudioAppConsole/AudioAppConsole.vcxproj
+++ b/AudioAppSolution/AudioAppConsole/AudioAppConsole.vcxproj
@@ -127,6 +127,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.c" />
+    <ClCompile Include="Playlist.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Playlist.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
