--- a/AudioAppSolution/AudioAppConsole/AudioAppConsole.vcxproj.filters
+++ b/AudioAppSolution/AudioAppConsole/AudioAppConsole.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="main.c">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Playlist.c">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Playlist.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
