--- a/AudioAppSolution/AudioAppConsole/AudioAppConsole.vcxproj.filters
+++ b/AudioAppSolution/AudioAppConsole/AudioAppConsole.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="Playlist.c">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Songs.c">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Playlist.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Songs.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
