--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,35 @@
 .vs/
 .git/
 
-./.vs/
-./x64/
+x64/
+
+AudioAppConsole/.vs/
+AudioAppConsole/x64/
+
+#Visual Studio files
+*.[Oo]bj
+*.user
+*.aps
+*.pch
+*.vspscc
+*.vssscc
+*_i.c
+*_p.c
+*.ncb
+*.suo
+*.tlb
+*.tlh
+*.bak
+*.[Cc]ache
+*.ilk
+*.log
+*.sbr
+*.sdf
+ipch/
+obj/
+[Bb]in
+[Dd]ebug*/
+[Rr]elease*/
+Ankh.NoLoad
+#Project files
+[Bb]uild/
